protocols, spec, cornanet: initial implementation of the events protocol (#30)
* protocols, spec: initial implementation of the events protocol

* protocols, tornet: test event checkin rotation, TLS fail detection

* all: finish implementing end-to-end event checkins and stats
